DO/002-nginx-ingress[https]/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: phaseii-ingress
spec:
  rules:
    - host: kuber.phaseiilabs.com
      http:
        paths:
          - backend:
              serviceName: piiapp-service
              servicePort: 80
    - host: httptest.phaseiilabs.com
      http:
        paths:
          - backend:
              serviceName: echo2
              servicePort: 80
    - host: kuber2.phaseiilabs.com
      http:
        paths:
          - backend:
              serviceName: piiapp-service
              servicePort: 80
